--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 1 <div class="inventory-app">
-  2 <products-list
+  2 <app-products-list
   3 [productList]="products"
-  4 (byProductSelected)="productWasSelected($event)">
-  5 </products-list>
+  4 (productSelected)="productWasSelected($event)">
+  5 </app-products-list>
   6 </div>
