--- a/src/app/product-row/product-row.component.html
+++ b/src/app/product-row/product-row.component.html
@@ -1,3 +1,11 @@
-<p>
-  product-row works!
-</p>
+  <app-product-image [product]='product'></app-product-image>
+  <div class="content">
+    <div class="header">{{ product.name }}</div>
+    <div class="meta">
+      <div class="product-sku">SKU #{{ product.sku }}</div>
+    </div>
+    <div class="description">
+      <app-product-description [product]='product'></app-product-description>
+    </div>
+  </div>
+  <app-price-display [price]='product.price'></app-price-display>
